Resolves: fdo#67863 #i124922# allow late setting of the font color...

for CoreText-layouted text

(cherry picked from commit 42f9768f771457c53a9f1e6a3581b2df9856401f)

Conflicts:
	vcl/aqua/source/gdi/ctfonts.cxx
	vcl/aqua/source/gdi/ctfonts.hxx
	vcl/aqua/source/gdi/ctlayout.cxx
	vcl/source/gdi/outdev3.cxx

(cherry picked from commit 507efabe8b40e34c2bebfdaa00d4264c5345d3dd)

Conflicts:
	vcl/quartz/ctlayout.cxx

Change-Id: Ie2685ab80ca87ea72e25f18d02f883fb36c24a36